--- a/projeto_bd/src/main/resources/view/tarefa.fxml
+++ b/projeto_bd/src/main/resources/view/tarefa.fxml
@@ -1,47 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.controller.TarefaFXController"
-            stylesheets="@tarefa.css"
-            prefWidth="700" prefHeight="550"
-            styleClass="root">
+<BorderPane prefHeight="550.0" prefWidth="700.0" styleClass="root" stylesheets="@tarefa.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.controller.TarefaFXController">
 
 
     <center>
-        <VBox alignment="CENTER" spacing="30" prefWidth="600">
+        <VBox alignment="CENTER" prefWidth="600" spacing="30">
 
 
             <VBox alignment="CENTER" spacing="15">
 
-                <HBox spacing="15" alignment="CENTER">
-                    <Label text="Titulo" styleClass="label-form" prefWidth="100" alignment="CENTER_RIGHT"/>
-                    <TextField fx:id="txtTitulo" styleClass="textfield-red" prefWidth="300"/>
+                   <HBox alignment="CENTER" spacing="15">
+                    <Label alignment="CENTER_RIGHT" prefWidth="100.0" styleClass="label-form" text="Titulo" />
+                    <TextField fx:id="txtTitulo" prefWidth="300.0" styleClass="textfield-red" />
                 </HBox>
 
-                <HBox spacing="15" alignment="CENTER">
-                    <Label text="Descrição" styleClass="label-form" prefWidth="100" alignment="CENTER_RIGHT"/>
-                    <TextField fx:id="txtDescricao" styleClass="textfield-red" prefWidth="300"/>
+                <HBox alignment="CENTER" spacing="15">
+                    <Label alignment="CENTER_RIGHT" prefWidth="100" styleClass="label-form" text="Descrição" />
+                    <TextField fx:id="txtDescricao" prefWidth="300" styleClass="textfield-red" />
                 </HBox>
 
-                <HBox spacing="15" alignment="CENTER">
-                    <Label text="Prazo" styleClass="label-form" prefWidth="100" alignment="CENTER_RIGHT"/>
-                    <TextField fx:id="txtPrazo" styleClass="textfield-red" prefWidth="300"/>
+                <HBox alignment="CENTER" spacing="15">
+                    <Label alignment="CENTER_RIGHT" prefWidth="100" styleClass="label-form" text="Prazo" />
+                    <TextField fx:id="txtPrazo" prefWidth="300" styleClass="textfield-red" />
                 </HBox>
 
-                <HBox spacing="15" alignment="CENTER">
-                    <Label text="Usuário" styleClass="label-form" prefWidth="100" alignment="CENTER_RIGHT"/>
-                    <ComboBox fx:id="cbUsuario" styleClass="textfield-red" prefWidth="300"/>
+                <HBox alignment="CENTER" spacing="15">
+                    <Label alignment="CENTER_RIGHT" prefWidth="100" styleClass="label-form" text="Usuário" />
+                    <ComboBox fx:id="cbUsuario" prefWidth="300" styleClass="textfield-red" />
                 </HBox>
 
-                <HBox spacing="15" alignment="CENTER">
-                    <Label text="Categoria" styleClass="label-form" prefWidth="100" alignment="CENTER_RIGHT"/>
-                    <ComboBox fx:id="cbCategoria" styleClass="textfield-red" prefWidth="300"/>
+                <HBox alignment="CENTER" spacing="15">
+                    <Label alignment="CENTER_RIGHT" prefWidth="100" styleClass="label-form" text="Categoria" />
+                    <ComboBox fx:id="cbCategoria" prefWidth="300" styleClass="textfield-red" />
                 </HBox>
             </VBox>
 
@@ -50,48 +54,56 @@
 
                 <HBox alignment="CENTER" spacing="25">
                     <Button fx:id="btnSalvar" styleClass="button-round">
-                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@save.png"/></image></ImageView></graphic>
+                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@save.png" /></image></ImageView></graphic>
                     </Button>
 
                     <Button fx:id="btnAtualizar" styleClass="button-round-green">
-                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@update.png"/></image></ImageView></graphic>
+                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@update.png" /></image></ImageView></graphic>
                     </Button>
 
                     <Button fx:id="btnExcluir" styleClass="button-round">
-                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@delete.png"/></image></ImageView></graphic>
+                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@delete.png" /></image></ImageView></graphic>
                     </Button>
 
                     <Button fx:id="btnListar" styleClass="button-round-green">
-                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@list.png"/></image></ImageView></graphic>
+                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@list.png" /></image></ImageView></graphic>
                     </Button>
 
                     <Button fx:id="btnConcluir" styleClass="button-round">
-                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@check.png"/></image></ImageView></graphic>
+                        <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@check.png" /></image></ImageView></graphic>
                     </Button>
                 </HBox>
 
 
-                <Label fx:id="lblMensagem" text="" styleClass="label-form"/>
+                <Label fx:id="lblMensagem" styleClass="label-form" text="" />
+					<TableView fx:id="tabelaTarefas" prefHeight="250" prefWidth="700">
+                		<columns>
+                    		<TableColumn fx:id="colTitulo" prefWidth="150" styleClass="table-column" text="Título" />
+                    		<TableColumn fx:id="colDescricao" prefWidth="200" styleClass="table-column" text="Descrição" />
+                    		<TableColumn fx:id="colPrazo" prefWidth="150" styleClass="table-column" text="Prazo" />
+                    		<TableColumn fx:id="colConcluida" prefWidth="199.0" styleClass="table-column" text="Concluída" />
+                		</columns>
+           			</TableView>
             </VBox>
         </VBox>
     </center>
 
 
     <bottom>
-        <HBox spacing="10" alignment="CENTER" BorderPane.alignment="CENTER">
-            <padding><Insets top="10" right="20" bottom="10" left="20"/></padding>
+        <HBox alignment="CENTER" spacing="10" BorderPane.alignment="CENTER">
+            <padding><Insets bottom="10" left="20" right="20" top="10" /></padding>
 
 
             <Button fx:id="btnVoltar" styleClass="button-round">
-                <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@voltar.png"/></image></ImageView></graphic>
+                <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@voltar.png" /></image></ImageView></graphic>
             </Button>
 
 
-            <Region HBox.hgrow="ALWAYS"/>
+            <Region HBox.hgrow="ALWAYS" />
 
 
             <Button fx:id="btnAjuda" styleClass="button-round">
-                <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@Vector.png"/></image></ImageView></graphic>
+                <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@Vector.png" /></image></ImageView></graphic>
             </Button>
         </HBox>
     </bottom>
