implementação update/atualizar

--- a/projeto_bd/src/main/resources/view/usuario.fxml
+++ b/projeto_bd/src/main/resources/view/usuario.fxml
@@ -32,6 +32,11 @@
 
 
             <VBox alignment="CENTER" spacing="15">
+           
+        <!-- campo que informa o id do usuario a ser atualizado --> 
+		<TextField fx:id="txtId" promptText="ID (para atualizar)" />
+		<Button fx:id="btnAtualizar" text="Atualizar" onAction="#atualizar" />
+            
                 <Button fx:id="btnSalvar" text="Salvar" styleClass="button-green"/>
                 <Label fx:id="lblMensagem" text="" styleClass="label-form"/>
             </VBox>
