--- a/projeto_bd/src/main/resources/view/tarefa.fxml
+++ b/projeto_bd/src/main/resources/view/tarefa.fxml
@@ -57,26 +57,30 @@
                     <Button fx:id="btnSalvar" styleClass="button-round">
                         <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@save.png" /></image></ImageView></graphic>
                     </Button>
+               <Label fx:id="lblMensagem1" styleClass="label-form" text="create" />
 
                     <Button fx:id="btnAtualizar" styleClass="button-round-green">
                         <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@update.png" /></image></ImageView></graphic>
                     </Button>
+   
+   
+                   <Label fx:id="lblMensagem" styleClass="label-form" text="update" />
 
                     <Button fx:id="btnExcluir" styleClass="button-round">
                         <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@delete.png" /></image></ImageView></graphic>
                     </Button>
+               <Label fx:id="lblMensagem11" styleClass="label-form" text="delete" />
 
                     <Button fx:id="btnListar" styleClass="button-round-green">
                         <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@list.png" /></image></ImageView></graphic>
                     </Button>
+               <Label fx:id="lblMensagem111" styleClass="label-form" text="list" />
 
                     <Button fx:id="btnConcluir" styleClass="button-round">
                         <graphic><ImageView fitHeight="22" preserveRatio="true"><image><Image url="@check.png" /></image></ImageView></graphic>
                     </Button>
+               <Label fx:id="lblMensagem1111" styleClass="label-form" text="check" />
                 </HBox>
-
-
-                <Label fx:id="lblMensagem" styleClass="label-form" text="" />
 					<TableView fx:id="tabelaTarefas" prefHeight="250" VBox.vgrow="ALWAYS">
                 		<columns>
                     		<TableColumn fx:id="colTitulo" prefWidth="150" styleClass="table-column" text="Título" />
